...
            stateView.trailingAnchor.constraint(lessThanOrEqualTo: view.trailingAnchor, constant: -20)
        ])
    }
    
    private func setUPAccessibilityIdentifiers() {
        view.accessibilityIdentifier = "searchView"
        tableView.accessibilityIdentifier = "iconsTableView"
        stateView.accessibilityIdentifier = "stateView"
        searchController.searchBar.searchTextField.accessibilityIdentifier = "searchBarTextField"
    }
}

// MARK: - SearchViewProtocol

extension SearchViewController: SearchViewProtocol {
...
